--- a/scripts/install
+++ b/scripts/install
@@ -123,12 +123,12 @@ chown $app:$app "$final_path/.env"
 #=================================================
 # BUILDING
 #=================================================
-ynh_script_progression --message="Building..." --weight=10
+#ynh_script_progression --message="Building..." --weight=10
 
-# Setup application config
-pushd $final_path
-	php$phpversion artisan key:generate #-n --force --env
-popd
+# # Setup application config
+# pushd $final_path
+# 	php$phpversion artisan key:generate #-n --force --env
+# popd
 
 #=================================================
 # SETUP SYSTEMD
