--- a/scripts/install
+++ b/scripts/install
@@ -24,6 +24,7 @@ domain=$YNH_APP_ARG_DOMAIN
 path_url="/"
 is_public=$YNH_APP_ARG_IS_PUBLIC
 phpversion=$YNH_PHP_VERSION
+key==$(ynh_string_random --length=24)
 
 app=$YNH_APP_INSTANCE_NAME
 
